--- a/hello_world_sinatra/lib/views/index.erb
+++ b/hello_world_sinatra/lib/views/index.erb
@@ -5,6 +5,13 @@
   <body>
     <h2>Mon super site de gossip, depuis le dossier views !</h2>
     <p>C est pas tout mais il s agirait de s y mettre !! Viens là mon <a href="/gossips/new/">COQUINOU</a></p>
-    <h1>BISOU</h1>
+    <h1>Et voici nos gossips</h1>
+
+    <% gossips.each do |gossip| %>
+      <p>
+        <%= gossip.author %><br/>
+        <%= gossip.content %>
+      </p>
+    <% end %>
   </body>
 </html>
