--- a/hello_world_sinatra/lib/views/new_gossip.erb
+++ b/hello_world_sinatra/lib/views/new_gossip.erb
@@ -3,11 +3,13 @@
     <title>Créer un potin</title>
   </head>
   <body>
-    <h1>Crée un potin !</h1>
-    <p>Balance ton potin via le formulaire ci-dessous</p>
+    <h1>Crée ton potin !</h1>
+    <p>Balance ton potin via le formulaire ci-dessous, jeune freluquet ! </p>
+
+
     <form action='/gossips/new/' method='POST'>
-      Saisi ici ton nom :  <input type='text' name='gossip_author'/><br/>
-      Balance ton potin : <input type='text' name='gossip_content'/><br/>
+      Saisis ici ton nom, petit margoulin:  <input type='text' name='gossip_author'/><br/>
+      Balance ton potin, jeune coquin: <input type='text' name='gossip_content'/><br/>
       <input type='submit'/>
     </form>
   </body>
