--- a/hello_world_sinatra/lib/views/show.erb
+++ b/hello_world_sinatra/lib/views/show.erb
@@ -4,8 +4,11 @@
     <title>PAGE POTIN</title>
   </head>
   <body>
-    <h2>Voici la page du potin n°  <%= params[:id] %> </h2>
-   
+    <h2>Voici la page du potin n°<%= params[:id] %> </h2>
+
+      <p>Son auteur : <%= id.author %></p>
+      <p>Le contenu du potin : <%= id.content %></p>
+    
     <p> <a href="/" </a>Lien pour revenir à la page des potins.</p>
 
   </body>
