--- a/hello_world_sinatra/lib/views/index.erb
+++ b/hello_world_sinatra/lib/views/index.erb
@@ -4,8 +4,9 @@
   </head>
   <body>
     <h2>Mon super site de gossip, depuis le dossier views !</h2>
-    <p>C est pas tout mais il s agirait de s y mettre !! Viens là mon <a href="/gossips/new/">COQUINOU</a></p>
-    <h1>Et voici nos gossips</h1>
+    <p>C est pas tout mais il s agirait de s y mettre !! Viens là mon <a href="/gossips/new/">COQUINOU</a>, pour m écrire un potin !</p>
+    <h1>Et voici les gossips du jour :</h1>
+
 
     <% gossips.each do |gossip| %>
       <p>
